--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
     "react": "^16.8.6",
-    "react-day-picker": "^7.4.8",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
