--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^6.4.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.4.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
