--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
